--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,23 @@
         ],
         "@babel/preset-react"
     ],
-    "plugins": ["@babel/plugin-proposal-class-properties"]
+    "plugins": ["@babel/plugin-proposal-class-properties"],
+    "env": {
+        "test": {
+            "presets": [
+                [
+                    "@babel/preset-env",
+                    {
+                        "modules": "commonjs"
+                    }
+                ],
+                "@babel/preset-react"
+            ],
+            "plugins": [
+                "@babel/plugin-syntax-dynamic-import",
+                "@babel/plugin-transform-modules-commonjs",
+                "@babel/plugin-proposal-class-properties"
+            ]
+        }
+    }
 }
