--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "scripts": {
         "build": "rollup -c",
         "test": "NODE_ENV=test jest",
-        "test:watch": "jest --watch"
+        "test:watch": "jest --watch",
+        "prepublishOnly": "npm run build"
     },
     "repository": {
         "type": "git",
