--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "build": "rm -rf ./lib && tsc",
         "test": "jest --env=jsdom",
         "lint": "tslint -c tslint.json --project tsconfig.json",
-        "prepare": "yarn test && yarn lint && yarn build"
+        "prepare": "yarn test && yarn build"
     },
     "repository": {
         "type": "git",
